kubernetes/applications/portfolio/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: portfolio
  namespace: portfolio
spec:
  parentRefs:
    - name: portfolio-gateway

  hostnames:
    - portfolio.zahaan.online

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: portfolio
          port: 80
